Fix comment header gradient overflow

--- a/_sass/minima/comments.scss
+++ b/_sass/minima/comments.scss
@@ -9,6 +9,7 @@ on dark or light theme.
     border-style: solid;
     border-width: 1px;
     border-radius: 8px;
+    overflow: hidden;
     color: black;
     display: block;
     margin-bottom: 10px;
